--- a/client/assets/style.css
+++ b/client/assets/style.css
@@ -137,6 +137,20 @@ h6 {
 .m-tp h1 {
     margin-bottom: 0px;
 }
+img.img-responsive.v-frame {
+    position: absolute;
+top: 23px;
+    left: 0px;
+    right: 0px;
+}
+img.profile-ring {
+    width: 280px;
+    height: 280px;
+    position: absolute;
+    left: -20px;
+    top: -15px;
+    right: 0px;
+}
 .m-tp .line3 {
     margin-bottom: 15px;
     margin-top: 0px;
@@ -3277,7 +3291,7 @@ a.save-btn {
 }
 .btn-del a {
     width: 120px;
-    font-size: 10px !important;
+      font-size: 8px !important;
     display: inline-block;
     padding: 4px 0px;letter-spacing: 0px;
     height: 30px;
@@ -3287,6 +3301,7 @@ a.save-btn {
 }
 ul.song-list li {
     padding: 5px 0px;
+    position: relative;
 }
 
 .dropdown-share-content.song-share {
@@ -3403,11 +3418,12 @@ a.save-btn.btm {
     margin-top: 15px;
 }
 img.img-responsive.ply {
+    position: absolute;
     width: 40px;
     left: 0px;
     right: 0px;
     margin: 0 auto;
-    top: 40%;
+top: 54%;
     margin-top: -12px;
 }
 .dropdown-share-content.edit-drp {
@@ -4598,6 +4614,20 @@ margin: 0px 0px;}
 
 
 @media (min-width: 320px) and (max-width: 767px) {
+	img.profile-ring {
+    width: 270px;
+    height: 270px;
+    position: absolute;
+left: -15px;
+    top: -15px;
+    right: 0px;
+}
+	.profile-pic {
+    max-width: 250px;
+    max-height: 240px;
+    display: block;
+    border-radius: 50%;
+}
 	li.nav-item.active:before {
 
     margin: 0px;}
